--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.gradle
 .DS_Store
 
 # built application files
@@ -33,7 +32,6 @@ project.properties
 
 # idea project files
 .idea/
-.idea/.name
 *.iml
 *.ipr
 *.iws
@@ -41,3 +39,6 @@ project.properties
 ##Gradle-based build
 .gradle
 build/
+
+# Secrets
+/app/src/main/res/values/private.xml
