--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,8 @@
     </activity>
 
     <provider
-        android:authorities="com.example.android.sunshine.app"
-        android:name=".data.WeatherProvider"/>
+        android:name=".data.WeatherProvider"
+        android:authorities="com.example.android.sunshine.app"/>
   </application>
 
 </manifest>
